<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Influence Counter</string>

    <string name="delete_game">Delete game</string>
    <string name="delete_history">Delete all</string>
    <string name="influence_change">%1$s -> %2$s</string>
    <string name="start_history_marker">-</string>
	<string name="game_name">Game %1$s</string>
	<string name="game_name_dialog_title">Game name</string>
	<string name="game_name_dialog_msg">Set game name.</string>
	<string name="dialog_ok">Ok</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="empty_history_message">The history log is empty. Press refresh to start logging a new game.</string>
    <string name="total_gained">Total gained</string>
	<string name="total_lost">Total lost</string>
	<string name="no_log">You have deleted the current game from history. Press Refresh if you want enable logging again.</string>
	
    <string name="column_label_time">Time</string>
    <string name="column_label_influence">Influence</string>
    <string name="column_label_change">Change</string>
    <string name="column_label_player1">Player 1</string>
    <string name="column_label_player2">Player 2</string>
    
    <string name="wakelock_label">Prevent screen from turning off</string>
    <string name="wakelock_description">Used to keep the screen alive, but dimmed during play. Still follow the configured time in display settings before dimming the screen. It is disabled as default, but can be enabled in the apps configuration page.</string>
    <string name="configuration">Configuration</string>
	<string name="two_player_view_disabled">Your screen is unfortunately to small to show the current two player view. </string>
    
	<string name="config_category_theme_properties">Theme</string>
	<string name="config_category_history">History view</string>
    <string name="config_wakelock_label">Keep screen alive</string>
    <string name="config_wakelock_summary">If enabled, screen is prevented from turning of, and is dimmed instead.</string>
    <string name="config_influence">Player 1 starting influence</string>
    <string name="config_influence_player2">Player 2 starting influence</string>
    <string name="config_set_influence">Set default starting influence</string>
    <string name="config_set_history_grouping_timer">Set timer after each influence change before a log entry is created (in seconds).</string>
	<string name="config_history_grouping_timer">Log timer</string>
	<string name="config_history_grouping_timer_summary">%1$s seconds</string>
    <string name="config_single_player_hint_arrows_summary">Enable changing influence hint arrows for single player view.</string>
    <string name="config_two_player_hint_arrows_summary">Enable changing influence hint arrows for two player view (not implemented yet).</string>
	<string name="config_single_player_hint_arrows_label">Single player hint arrows</string>    
	<string name="config_two_player_hint_arrows_label">Two player hint arrows</string>    
	<string name="config_text_color_title">Text color</string>
	<string name="config_text_glow_title">Text glow</string>
	<string name="config_text_glow_summary">Enable text glow.</string>
	<string name="config_glow_color_title">Text glow color</string>
	<string name="config_border_color_title">Text border color</string>
	<string name="config_text_border_title">Text border</string>
	<string name="config_text_border_summary">Enable text border.</string>
		
    <!-- Color Picker Preference -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>    
</resources>