<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="30dp" >

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:text="Game 1"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <!-- Label row -->
    <LinearLayout
        android:id="@+id/listview_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_name"
        android:layout_marginBottom="3dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/column_label_time"
            style="@style/history_list_column_label" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_label_influence"
            style="@style/history_list_column_label" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_label_change"
            style="@style/history_list_column_label" />
    </LinearLayout>
    <ListView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listview_labels"
        android:layout_marginBottom="10dp"
        android:cacheColorHint="#00000000"
        android:divider="@null" />

</RelativeLayout>