<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="65dip"
    android:layout_marginLeft="15dip"
    android:layout_marginRight="15dip"
    android:layout_marginTop="26dip"
    android:background="@android:color/white"
    android:visibility="invisible" >

    <TextView
        android:id="@+id/page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:paddingTop="35dp"
        android:text="1/1" />

    <TextView
        android:id="@+id/empty_history_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/empty_history_message"
        android:textColor="#000000"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/delete_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:paddingBottom="15dp"
        android:text="@string/delete_game"
        android:textColor="@color/history_button_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@null"
        android:paddingBottom="15dp"
        android:text="@string/delete_history"
        android:textColor="@color/history_button_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v4.view.ViewPager
        android:id="@+id/history_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/delete_game_button" >
    </android.support.v4.view.ViewPager>
</RelativeLayout>